# fftools

./: .gitignore  Cargo.toml  README.md  build.sh
.github/: FUNDING.yml
src/: consts.rs  logs.rs  main.rs  parser.rs  structs.rs  utils.rs
src/parser/: commands.rs  flags.rs  options.rs
src/parser/commands/: fps.rs  gif.rs  merge.rs  optimize.rs  scale.rs  trim.rs  volume.rs
src/parser/flags/: copy.rs  encode.rs  no_audio.rs  no_trim.rs  overwrite.rs
src/parser/options/: fps.rs  from.rs  optimize.rs  scale.rs  to.rs  volume.rs
